fix quill editor problems
- apply font-weight for strong tag
- decrease font size when screen size is less than 768px
- change code block overflow to horizontal scroll

--- a/src/components/post/PostViewer.scss
+++ b/src/components/post/PostViewer.scss
@@ -1,5 +1,6 @@
 .PostViewer {
 	margin-bottom: 4rem;
+
 	.PostViewerWrapper {
 		position: fixed;
 		z-index: 10;
@@ -13,6 +14,7 @@
 		background-color: rgba(0, 0, 0, 0.4);
 	}
 	.post-head {
+		font-weight: 700;
 		border-bottom: 1px solid #e0e0e0;
 		padding-bottom: 3rem;
 		margin-bottom: 3rem;
@@ -55,7 +57,7 @@
 		.ql-syntax {
 			background-color: #000;
 			color: #fff;
-			overflow: visible;
+			overflow-x: scroll;
 			border-radius: 0.2rem;
 			padding: 0.8rem 0.8rem;
 		}
@@ -75,8 +77,8 @@
 	}
 }
 
-// @media only screen and (max-width: 768px) {
-// 	.PostViewer .post-head h2 {
-// 		font-size: 2.4rem;
-// 	}
-// }
+@media only screen and (max-width: 768px) {
+	.PostViewer .post-head h2 {
+		font-size: 2.4rem;
+	}
+}
